--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/src/IMG/favicon/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/IMG/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/IMG/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/IMG/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/src/IMG/favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#17191d" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
     <title>Traidar Analyst Prototype</title>
   </head>
   <body>
