--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/src/IMG/favicon/favicon.ico" sizes="any" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/src/IMG/favicon/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/IMG/favicon/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/src/IMG/favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="/src/IMG/favicon/site.webmanifest" />
+    <link rel="icon" href="/src/assets/IMG/favicon/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/IMG/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/IMG/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/IMG/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="/src/assets/IMG/favicon/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#17191d" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
